Imported stories from T212 from the blog to DP.

--- a/translations.html
+++ b/translations.html
@@ -61,15 +61,8 @@ title: Dharma Pearls | Translations
   <p>This division of the <cite>Taisho</cite> collects together Chinese translations of Buddhist lore and storytelling texts traditionally called <em>avādana</em>s and <em>jātaka</em>s. The material generally revolves around stories about the life and past lives of the Buddha and his disciples. Verse collections like the <em>Dharmapāda</em> are also included in this collection. There is a total of 68 texts, many of which are large collections of individual stories.</p>
   
   <ul class="list-style-none">
-    <li>T211: <a class="title" href="02_avadana/dharmapada/T211/index.html">Dharma Verse Stories</a> (39 chapters)</li>
-    <ul>
-      <li>Chapter 1: Impermanence</li>
-      <ul>
-        <li>1. <a href="02_avadana/dharmapada/T211/T211c1v1-2.html">Śakra Attains Stream Entry</a></li>
-        <li>2. <a href="02_avadana/dharmapada/T211/T211c1v3.html">King Prasenajit’s Queen</a></li>
-        <li>3. <a href="02_avadana/dharmapada/T211/T211c1v4-6.html">Like Cattle Led to Their Slaughter</a></li>
-      </ul>
-    </ul>
+    <li>T211: <a class="title" href="02_avadana/dharmapada/T211/index.html">Dharma Verse Stories</a> (3 <em>sūtra</em>s from Chapter 1)</li>
+    <li>T212: <a class="title" href="02_avadana/dharmapada/T212/index.html">The Rising Sun</a> (3 <em>sūtra</em>s from Chapter 1)</li>
   </ul> 
 
   <hr/>
