--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>27-Nov-2024</dt>
+    <dd>Added the first three stories of <a href="02_avadana/dharmapada/T212/index.html">T212 The Rising Sun</a></dd>
     <dt>25-Nov-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/ekottarika/16/EA_16_08.html">EĀ 16.8 Acceptance and Consideration</a></dd>
