Added SA 1.154 and updated format of EA 9.1-10, EA 10.1-10. Other small fixes/changes.

--- a/translations.html
+++ b/translations.html
@@ -8,7 +8,7 @@ title: Dharma Pearls | Translations
   
   <hr/>
   
-  <p>Below is a list of all the translations published so far here at Dharma Pearls, organized along the lines of the <cite>Taisho Daizokyo</cite>. The project Overview that was previous found at this URL <a href="project_overview.html">has moved to a new location</a>.</p>
+  <p>Below is a list of all the translations published so far here at Dharma Pearls, organized along the lines of the <cite>Taisho Daizokyo</cite>. The project overview that was previously found at this URL <a href="project_overview.html">has moved to a new location</a>.</p>
 
   <hr/>
 
@@ -58,7 +58,7 @@ title: Dharma Pearls | Translations
 
   <h2>The Avadānas</h2>
 
-  <p>This division of the <cite>Taisho</cite> collects together Chinese translations of Buddhist lore and storytelling texts traditionally called <em>avādana</em>s and <em>jātaka</em>s. The material generally revolves around stories about the life and past lives of the Buddha and his disciples. Verse collections like the <em>Dharmapāda</em> are also included in this collection. There is a total of 68 texts, many of which are large collections of individual stories.</p>
+  <p>This division of the <cite>Taisho</cite> collects together Chinese translations of Buddhist lore and storytelling texts traditionally called <em>avadāna</em>s and <em>jātaka</em>s. The material generally revolves around stories about the life and past lives of the Buddha and his disciples. Verse collections like the <em>Dharmapāda</em> are also included in this collection. There is a total of 68 texts, many of which are large collections of individual stories.</p>
   
   <ul class="list-style-none">
     <li>T211: <a class="title" href="02_avadana/dharmapada/T211/index.html">Dharma Verse Stories</a> (3 <em>sūtra</em>s from Chapter 1)</li>
