--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,9 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>10-Dec-2024</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_154.html">SĀ 1.154 Seven Standpoints</a></dd>
     <dt>27-Nov-2024</dt>
     <dd>Added the first three stories of <a href="02_avadana/dharmapada/T212/index.html">T212 The Rising Sun</a></dd>
     <dt>25-Nov-2024</dt>
