--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,11 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>4-Jan-2025</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_155.html">SĀ 1.155 The Bound and Awakened</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_156.html">SĀ 1.156 The Bound and Awakened (2)</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_157.html">SĀ 1.157 The Aggregates in the Past, Future, and Present</a></dd>
     <dt>10-Dec-2024</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_154.html">SĀ 1.154 Seven Standpoints</a></dd>
