Updated Pronunciation guide to Chinese, update to Resources page with new sections

--- a/resources.html
+++ b/resources.html
@@ -15,9 +15,12 @@ title: Dharma Pearls | Resources
 
 <p>This glossary is a work in progress. Very little content is available at present, but terms will be added over time. It’s intended to help the reader understand the Buddhist vocabulary and proper names that are found in our translations. It will also include notes on the relationships that exist between Buddhist sources in different languages (mainly Chinese, Gandhari, Pali, and Sanskrit).</p>
 
-<h3><a href="00_resources\pronunciation.html">IPA Chinese Pronunciation Guide</a></h3>
+<h3><a href="00_resources/references/pronunciation.html">IPA Chinese Pronunciation Guide</a></h3>
 <p>This table is also a work in progress, but it has grown to several hundred entries. It documents the IPA pronunciations of Chinese characters at various points in Chinese history, which is crucial to understanding the transliterations found in Chinese Buddhist texts.</p>
 
+
+<h3><a href="00_resources/studies/index.html">A Collection of Essays and Studies</a></h3>
+<p>This section is dedicated to archiving essays and studies regarding the study of early Buddhist texts. </p>
 <hr/>
 
 </article>
