added a couple entries to glossary

--- a/00_resources/glossary/index.html
+++ b/00_resources/glossary/index.html
@@ -8,11 +8,35 @@ base: ../../
   <h1>A Companion Glossary of<br/>Buddhist Terms and Proper Names</h1>
 
   <p>This glossary collates notes and explanations of common terms and proper names found in the translations archived here at Dharma Pearls. Most of the material is extracted from footnotes to our translations and sometimes supplemented by further research and documentation.</p>
-  <p>The <cite>Glossary</cite> organized along the same lines as a dictionary in (English) alphabetical order. To find a term, follow the link to its first letter below.</p>
+  <p>The <cite>Glossary</cite> organized along the same lines as a dictionary in (English) alphabetical order with the addition of a section for numbered lists. To find a term, follow the link to its first letter below.</p>
 
   <hr/>
 
-  <h3 class="center"><a href=".html">A</a> | <a href=".html">B</a> | <a href=".html">C</a> | <a href=".html">D</a> | <a href=".html">E</a> | <a href=".html">G</a> | <a href=".html">H</a> | <a href=".html">I</a> | <a href=".html">J</a> | <a href=".html">K</a> | <a href=".html">M</a> | <a href=".html">N</a> | <a href=".html">P</a> | <a href=".html">R</a> | <a href="s/index.html">S</a> | <a href=".html">T</a> | <a href=".html">U</a> | <a href=".html">V</a> | <a href=".html">Y</a></h3>
+  <h3 class="center"><a href="#numbered">1-9</a> | <a href="#A">A</a> | <!--<a href="#B">B</a> | <a href="#C">C</a> | <a href="#D">D</a> | <a href="#E">E</a> | <a href="#F">F</a> | <a href="#G">G</a> | <a href="#H">H</a> | <a href="#I">I</a> | <a href="#J">J</a> | <a href="#K">K</a> | <a href="#L">L</a> | <a href="#M">M</a> | <a href="#N">N</a> | <a href="#O">O</a> | <a href="#P">P</a> | <a href="#Q">Q</a> | <a href="#R">R</a> |--> <a href="#S">S</a> <!--| <a href="#T">T</a> | <a href="#U">U</a> | <a href="#V">V</a> | <a href="#W">W</a> | <a href="#Y">Y</a>--></h3>
 
+  <hr/>
+
+  <h3 id="numbered">- Numbered Lists -</h3>
+
+  <ul class="list-style-none">
+    <li id="five-aggregates"><strong><a href="1-9/5-aggregates.html">five aggregates</a>.</strong> G. <em>paṃcakaṃdha</em> (<em>pacakadha</em>), P. <em>pañcakkhandhā</em>, S. <em>pañcaskandhāḥ</em>, C. <span class="ch">五陰</span>, <span class="ch">五衆</span>, <span class="ch">五蘊</span>.<br/><br/></li>
+  </ul>
+  
+  <hr/>
+
+  <h3 id="S">- A -</h3>
+
+  <ul class="list-style-none">
+    <li id="aggregate"><strong><a href="a/aggregate.html">aggregate</a>.</strong> G. <em>kaṃdha</em> (<em>kadha</em>), P. <em>khandha</em>, S. <em>skandhaḥ</em>, C. <span class="ch">陰</span>, <span class="ch">衆</span>, <span class="ch">蘊</span>.<br/><br/></li>
+  </ul>
+  
+  <hr/>
+
+  <h3 id="S">- S -</h3>
+
+  <ul class="list-style-none">
+    <li id="sense"><strong><a href="s/sense.html">sense</a>.</strong> G. <em>ayadana</em>, P/S. <em>āyatana</em>, C. <span class="ch">入</span>, <span class="ch">入處</span>, <span class="ch">處</span>.<br/><br/></li>
+  </ul>
+  
   <hr/>
 </article>
