--- a/00_resources/glossary/s/sense.html
+++ b/00_resources/glossary/s/sense.html
@@ -1,22 +1,22 @@
 ---
 layout: default
 type: home
-title: Dharma Pearls | Resources | A Companion Glossary of Buddhist Terms and Proper Names | Sense (āyatana)
+title: Dharma Pearls | Resources | A Companion Glossary of Buddhist Terms and Proper Names | Sense
 base: ../../../
 ---
 <article class="home">
   <h1><a href="../index.html">A Companion Glossary of<br/>Buddhist Terms and Proper Names</a></h1> 
-  <h1>Sense (<em>āyatana</em>)</h1>
+  <h1>Sense</h1>
 
   <hr/>
 
-<p>G. <em>ayadana</em>, P/S. <em>āyatana</em>, C. 入 (DĀ, EĀ, SĀ<sup>2</sup>), 入處 (SĀ), 處 (MĀ).</p>
+<p>G. <em>ayadana</em>, P/S. <em>āyatana</em>, C. <span class="ch">入</span> (DĀ, EĀ, SĀ<sup>2</sup>), <span class="ch">入處</span> (SĀ), <span class="ch">處</span> (MĀ).</p>
 <p>In Buddhist language, sensory experience is based on six inner senses and six outer senses. The six inner senses are the eye, ear, nose, tongue, body, and mind. The outer senses are sights, sounds, odors, flavors, touches (i.e., tactile feelings), and mental objects. Inner here means within oneself (i.e., personal). Outer means outside of oneself (i.e., other people or the environment). These two lists are sometimes combined into a single list of twelve. In should be understood that these senses only provide basic data to higher functions of mind like feeling, conceptualization, action, and awareness.</p>
 <p>In P. and S. sources, the equivalent word is <em>āyatana</em>. Sanskrit readings of this word in English include “support,” “foundation,” “place,” “home.” These meanings were commonly extended for specific contexts to mean a sanctuary, the place of a sacred fire, the site of a house, or an altar, to give a few examples. Thus, it was a general term often put to many specific usages, but they involve physical locations. </p>
 <p>Buddhists extended the meaning of <em>āyatana</em> to mean the supports or locations of sensory experience. In this special usage, it became a psychological term rather than one of physical location.</p>
 <p>It is generally considered a noun derived from <em>āyati</em>, which in S. can mean “extending,” “stretching,” “lineage,” “a descendent,” “arrival,” or “coming near.” We see many of these readings reflected in the definitions of <em>āyatana</em> in Pali dictionaries, but they did not have much influence on S. readings of the word.</p>
-<p>In Chinese translation, we find three common translations: 入 (“entry”), 處 (“place”), and 入處 (“entry place”). The first two represent separate interpretations, while the third seems to be a double translation that combines the two readings.</p>
-<p>處 is a good translation of S. <em>āyatana</em> as “place,” but 入 is not as easy to correlate with the Indic equivalents. It may be derived from the S. verb <em>āyāti</em>, which can mean “arrive,” “become something,” or “enter.” Such a reading as S. <em>āyātana</em> would've been possible in G. because that language didn’t distinguish long and short vowels. It can also be noticed that later C. translators like Xuanzang or Yijing who worked with Sanskritized Buddhist texts preferred 處 as their translation, while earlier Pr. translators often chose 入. This might indicate a change over time in how the word(s) were understood.</p>
+<p>In Chinese translation, we find three common translations: <span class="ch">入</span> (“entry”), <span class="ch">處</span> (“place”), and <span class="ch">入處</span> (“entry place”). The first two represent separate interpretations, while the third seems to be a double translation that combines the two readings.</p>
+<p><span class="ch">處</span> is a good translation of S. <em>āyatana</em> as “place,” but <span class="ch">入</span> is not as easy to correlate with the Indic equivalents. It may be derived from the S. verb <em>āyāti</em>, which can mean “arrive,” “become something,” or “enter.” Such a reading as S. <em>āyātana</em> would've been possible in G. because that language didn’t distinguish long and short vowels. It can also be noticed that later C. translators like Xuanzang or Yijing who worked with Sanskritized Buddhist texts preferred <span class="ch">處</span> as their translation, while earlier Pr. translators often chose <span class="ch">入</span>. This might indicate a change over time in how the word(s) were understood.</p>
 <hr/>
 <p>Last Revised: 18 February 2024</p>
 </article>
