Converted DA 9 to new format and corrected minors errors

--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -4358,10 +4358,24 @@ base: ../../
     <tr>
       <td>㝹 (=羺)</td><td>?</td><td>~nu?</td><td>?</td><td>?</td><td>nóu</td><td><em>n/a</em></td>
     </tr>
+
+    <tr>
+      <td>路</td><td>g̊lag</td><td>lo</td><td>lu</td><td>lu</td><td>lù</td><td><em>1277</em></td>
+    </tr>
+
+    <tr>
+      <td>嗢</td><td>•uət</td><td>•uət</td><td>u</td><td>u</td><td>wū</td><td><em>245</em></td>
+    </tr>
+
+    <tr>
+      <td>諾</td><td>nak</td><td>nak(ndak)</td><td>no</td><td>nuə</td><td>nuò</td><td><em>1233>1226</em></td>
+    </tr>
     
 <!-- work zone
-拘薩羅
-kɪu-sat-la
+嗢跋諾迦
+•uət-buat-nak-ka
+折路迦
+tʃɪɛt-lo-ka
 -->
 </table>
 
