Added SA 1.166-9, 3.71, 6.28-31, updated pronunciation table

--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -4370,12 +4370,16 @@ base: ../../
     <tr>
       <td>諾</td><td>nak</td><td>nak(ndak)</td><td>no</td><td>nuə</td><td>nuò</td><td><em>1233>1226</em></td>
     </tr>
+
+    <tr>
+      <td>頗</td><td>p‘uar</td><td>p‘ua</td><td>p‘o</td><td>p‘o</td><td>pō</td><td><em>1472</em></td>
+    </tr>
     
 <!-- work zone
 嗢跋諾迦
 •uət-buat-nak-ka
-折路迦
-tʃɪɛt-lo-ka
+頗求那
+p‘ua-gɪəu-na
 -->
 </table>
 
