--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,14 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>1-Feb-2025</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/02/SA2_75.html">SĀ 2.75 How to End Views about Self</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_76.html">SĀ 2.76 Knowing and Seeing Ignorance</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_77.html">SĀ 2.77 Truly Knowing and Seeing</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_78.html">SĀ 2.78 Impermanent and Changing</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_79.html">SĀ 2.79 Truly Knowing</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_80.html">SĀ 2.80 Truly Knowing (2)</a></dd>
     <dt>27-Jan-2025</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_166.html">SĀ 1.166 The World</a></dd>
