Added SA 2.81-92, updated SA 2.127-128, other typos

--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>6-Feb-2025</dt>
+    <dd>Added <a href="01_agama/samyukta/02/SA2_81-92.html">SĀ 2.81-92 The Sense Fields Are Imperment, Etc.</a></dd>
     <dt>1-Feb-2025</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/02/SA2_75.html">SĀ 2.75 How to End Views about Self</a></dd>
