--- a/whats-new.html
+++ b/whats-new.html
@@ -9,7 +9,7 @@ title: Dharma Pearls | What’s New
     <dt>10-Feb-2025</dt>
     <dd>Added <a href="01_agama/ekottarika/39/EA_39_04.html">EĀ 39.4 The City Parable</a></dd>
     <dt>6-Feb-2025</dt>
-    <dd>Added <a href="01_agama/samyukta/02/SA2_81-92.html">SĀ 2.81-92 The Sense Fields Are Imperment, Etc.</a></dd>
+    <dd>Added <a href="01_agama/samyukta/02/SA2_81-92.html">SĀ 2.81-92 The Sense Fields Are Impermanent, Etc.</a></dd>
     <dt>1-Feb-2025</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/02/SA2_75.html">SĀ 2.75 How to End Views about Self</a></dd>
