Added EA 17.1-6 along with a few corrections

--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -30,7 +30,7 @@ base: ../../
 
 <h4 class="left mar-vert-0 radindex">3: <!--<a href="#r29">29: 又</a> --><a href="#r30">口</a> <a href="#r31">囗</a> <a href="#r32">土</a> <!--<a href="#r33">士</a> <a href="#r34">夂</a> <a href="#r35">夊</a> --><a href="#r36">夕</a> <a href="#r37">大</a> <a href="#r38">女</a> <a href="#r39">子</a> <a href="#r40">宀</a> <!--<a href="#r41">寸</a> <a href="#r42">小</a> <a href="#r43">尢</a>--> <a href="#r44">尸</a> <!--<a href="#r45">屮</a> <a href="#r46">山</a> <a href="#r47">川</a> --> <a href="#r48">工</a> <!--<a href="#r49">己</a>--> <a href="#r50">巾</a> <!--<a href="#r51">干</a> <a href="#r52">幺</a>--> <a href="#r53">广</a> <a href="#r54">廴</a> <!--<a href="#r55">廾</a> <a href="#r56">弋</a> <a href="#r57">弓</a> <a href="#r58">彑</a> <a href="#r59">彡</a>--> <a href="#r60">彳</a></h4>
 
-<h4 class="left mar-vert-0 radindex">4: <a href="#r61">心忄</a> <a href="#r62">戈</a> <a href="#r63">戸</a> <a href="#r64">手扌</a> <a href="#r65">支</a> <a href="#r66">攴攵</a> <!--<a href="#r67">文</a> <a href="#r68">斗</a>--> <a href="#r69">斤</a> <!--<a href="#r70">方</a> <a href="#r71">无</a>--> <a href="#r72">日</a> <!--<a href="#r73">曰</a> <a href="#r74">月</a>--> <a href="#r75">木</a> <a href="#r76">欠</a> <!--<a href="#r77">止</a> <a href="#r78">歹</a> <a href="#r79">殳</a> <a href="#r80">毋</a>--> <a href="#r81">比</a> <!--<a href="#r82">毛</a>--> <a href="#r83">氏</a> <!--<a href="#r84">气</a>--> <a href="#r85">水氵</a> <a href="#r86">火灬</a> <a href="#r87">爪</a> <!--<a href="#r88">父</a>--> <a href="#r89">爻</a> <!--<a href="#r90">爿</a> <a href="#r91">片</a> <a href="#r92">牙</a>--> <a href="#r93">牛</a> <!--<a href="#r94">犬</a>--></h4>                   
+<h4 class="left mar-vert-0 radindex">4: <a href="#r61">心忄</a> <a href="#r62">戈</a> <a href="#r63">戸</a> <a href="#r64">手扌</a> <a href="#r65">支</a> <a href="#r66">攴攵</a> <a href="#r67">文</a> <!--<a href="#r68">斗</a>--> <a href="#r69">斤</a> <!--<a href="#r70">方</a> <a href="#r71">无</a>--> <a href="#r72">日</a> <!--<a href="#r73">曰</a> <a href="#r74">月</a>--> <a href="#r75">木</a> <a href="#r76">欠</a> <!--<a href="#r77">止</a> <a href="#r78">歹</a> <a href="#r79">殳</a> <a href="#r80">毋</a>--> <a href="#r81">比</a> <!--<a href="#r82">毛</a>--> <a href="#r83">氏</a> <!--<a href="#r84">气</a>--> <a href="#r85">水氵</a> <a href="#r86">火灬</a> <a href="#r87">爪</a> <!--<a href="#r88">父</a>--> <a href="#r89">爻</a> <!--<a href="#r90">爿</a> <a href="#r91">片</a> <a href="#r92">牙</a>--> <a href="#r93">牛</a> <!--<a href="#r94">犬</a>--></h4>                   
 
 <h4 class="left mar-vert-0 radindex">5: <!--<a href="#r95">玄</a>--> <a href="#r96">玉 王</a> <!--<a href="#r97">瓜</a>--> <a href="#r98">瓦</a> <a href="#r99">甘</a> <!--<a href="#r100">生</a>--> <a href="#r101">用</a> <a href="#r102">田</a> <!--<a href="#r103">疋</a>--> <a href="#r104">疒</a> <!--<a href="#r105">癶</a> <a href="#r106">白</a> <a href="#r107">皮</a>--> <a href="#r108">皿</a> <a href="#r109">目</a> <!--<a href="#r110">矛</a> <a href="#r111">矢</a>--> <a href="#r112">石</a> <a href="#r113">示</a> <!--<a href="#r114">禸</a>--> <a href="#r115">禾</a> <a href="#r116">穴</a> <!--<a href="#r117">立</a>--></h4>
 
@@ -1820,8 +1820,8 @@ base: ../../
     </tr>
 
 </table>
-<!--
-<h4 id="r67"><strong>Radical 67</strong></h4>
+
+<h4 id="r67"><strong>Radical 67: 文</strong></h4>
 
 <table width="100%">
     <th align="left" width="10%">Char.</th>
@@ -1831,8 +1831,12 @@ base: ../../
     <th align="left" width="16%">EM</th>
     <th align="left" width="16%">Pinyin</th>
     <th align="left" width="10%"><em>Gakken</em></th>
-</table>
 
+    <tr>
+      <td>文</td><td>mɪuən</td><td>mɪuən (mbɪuən)</td><td>wən</td><td>uən</td><td>wén</td><td><em>574</em></td>
+    </tr>
+</table>
+<!--
 <h4 id="r68"><strong>Radical 68</strong></h4>
 
 <table width="100%">
@@ -4374,12 +4378,39 @@ base: ../../
     <tr>
       <td>頗</td><td>p‘uar</td><td>p‘ua</td><td>p‘o</td><td>p‘o</td><td>pō</td><td><em>1472</em></td>
     </tr>
-    
+
+    <tr>
+      <td>燈</td><td>təŋ</td><td>təŋ</td><td>təŋ</td><td>təŋ</td><td>dēng</td><td><em>803</em></td>
+    </tr>
+
+    <tr>
+      <td>均<sup>1</sup></td><td>kiuen</td><td>kiuĕn</td><td>kiuən</td><td>ts̆üən</td><td>jūn</td><td><em>270</em></td>
+    </tr>
+    <tr>
+      <td>均<sup>2</sup></td><td>ɦɪuən</td><td>ɦɪuən</td><td>iuən</td><td>üən</td><td>yùn</td><td><em>270>1468</em></td>
+    </tr>
+
+    <tr>
+      <td>式</td><td>thiək</td><td>sɪək</td><td>sɪəi</td><td>ṣï</td><td>shì</td><td><em>430</em></td>
+    </tr>
+
+    <tr>
+      <td>詰</td><td>k‘iet</td><td>k‘iĕt</td><td>k‘iəi</td><td>ts̆ie</td><td>jié, jí</td><td><em>1214</em></td>
+    </tr>
+
+    <tr>
+      <td>畢</td><td>piet</td><td>piĕt</td><td>piəi</td><td>pi</td><td>bì</td><td><em>861</em></td>
+    </tr>
+
+    <tr>
+      <td>地</td><td>dieg</td><td>dii</td><td>ti</td><td>ti</td><td>dì</td><td><em>268</em></td>
+    </tr>
+
+
 <!-- work zone
-嗢跋諾迦
-•uət-buat-nak-ka
-頗求那
-p‘ua-gɪəu-na
+畢地槃持
+piĕt-dii-buan-ḍɪei
+
 -->
 </table>
 
