--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>26-Feb-2025</dt>
+    <dd>Added <a href="01_agama/ekottarika/17/EA_17_01.html">EĀ 17.1 Rāhula</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/17/EA_17_02.html">EĀ 17.2 Two People</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/17/EA_17_03.html">EĀ 17.3 Two People (2)</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/17/EA_17_04.html">EĀ 17.4 Two Things</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/17/EA_17_05.html">EĀ 17.5 Bitter Fruit</a></dd>
+    <dd>Added <a href="01_agama/ekottarika/17/EA_17_06.html">EĀ 17.6 Sweet Fruit</a></dd>
     <dt>10-Feb-2025</dt>
     <dd>Added <a href="01_agama/ekottarika/39/EA_39_04.html">EĀ 39.4 The City Parable</a></dd>
     <dt>6-Feb-2025</dt>
