--- a/00_resources/references/pronunciation.html
+++ b/00_resources/references/pronunciation.html
@@ -4406,10 +4406,24 @@ base: ../../
       <td>地</td><td>dieg</td><td>dii</td><td>ti</td><td>ti</td><td>dì</td><td><em>268</em></td>
     </tr>
 
+    <tr>
+      <td>弗</td><td>pɪuət</td><td>pɪuət</td><td>fu</td><td>fu</td><td>fú</td><td><em>432</em></td>
+    </tr>
+
+    <tr>
+      <td>逮<sup>1</sup></td><td>dəg</td><td>dəi</td><td>tai</td><td>tai</td><td>dài, dǎi</td><td><em>1323>51</em></td>
+    </tr>
+    <tr>
+      <td>逮<sup>2</sup></td><td>der</td><td>dei</td><td>tiəi</td><td>ti</td><td>dì</td><td><em>1323</em></td>
+    </tr>
+    
+    <tr>
+      <td>第</td><td>der</td><td>dei</td><td>tiəi</td><td>ti</td><td>dì</td><td><em>1323>958</em></td>
+    </tr>
 
 <!-- work zone
-畢地槃持
-piĕt-dii-buan-ḍɪei
+弗于逮
+pɪuət-ɦɪu-dəi
 
 -->
 </table>
