--- a/translations.html
+++ b/translations.html
@@ -42,7 +42,7 @@ title: Dharma Pearls | Translations
       <li>15. <a href="01_agama/samyukta3/T101_15.html">Mindfulness</a></li>
     </ul>
     <li>T102: <a href="01_agama/other/T102.html">The Five Aggregates Are Empty Sūtra</a></li>
-    <li>T109: <a href="01_agama/other/T109.html">Turning the Dharma Wheel Sūtra</a></li>
+    <li>T109: <a href="01_agama/other/T109.html">The Turning the Dharma Wheel Sūtra</a></li>
     <li>T110: <a href="01_agama/other/T110.html">The Three Turnings of the Dharma Wheel Sūtra</a></li>
     <li>T112: <a href="01_agama/other/T112.html">The Eightfold Right Path Sūtra</a></li>
   </ul>
