--- a/whats-new.html
+++ b/whats-new.html
@@ -7,7 +7,7 @@ title: Dharma Pearls | What’s New
 <h1>What’s New</h1>
   <dl class="whats-new">
     <dt>25-Mar-2025</dt>
-    <dd>Added <a href="01_agama/madhyama/MA_190.html">MĀ 190 Smaller Emptiness</a></dd>
+    <dd>Added <a href="01_agama/madhyama/MA_190.html">MĀ 190 The Smaller Emptiness</a></dd>
     <dt>26-Feb-2025</dt>
     <dd>Added <a href="01_agama/ekottarika/17/EA_17_01.html">EĀ 17.1 Rāhula</a></dd>
     <dd>Added <a href="01_agama/ekottarika/17/EA_17_02.html">EĀ 17.2 Two People</a></dd>
