Added index files for SA 16-18

--- a/01_agama/samyukta/17/index.html
+++ b/01_agama/samyukta/17/index.html
@@ -1,22 +1,180 @@
-<!--SĀ 17.1 	T99.1062 	? 	T100.1, SN 21.5
-SĀ 17.2 	T99.1063 	? 	T100.2, SN 21.6
-SĀ 17.3 	T99.1064 	? 	T100.3, SN 17.35-36, EĀ 12.7
-SĀ 17.4 	T99.1065 	? 	T100.4
-SĀ 17.5 	T99.1066 	? 	T100.6
-SĀ 17.6 	T99.1067 	? 	T100.5, SN 21.8, EĀ 18.6
-SĀ 17.7 	T99.1068 	? 	T100.7, SN 21.9
-SĀ 17.8 	T99.1069 	? 	T100.8, SN 21.7, AN 4.48
-SĀ 17.9 	T99.1070 	? 	T100.9, SN 21.4
-SĀ 17.10 	T99.1071 	? 	T100.10, SN 21.10
-SĀ 17.11 	T99.1072 	? 	T100.11, EĀ 35.10
-SĀ 17.12 	T99.1073 	? 	T100.12, AN 3.79, EĀ 23.5
-SĀ 17.13 	T99.1074 	? 	T100.13, MĀ 62
-SĀ 17.14 	T99.1075 	? 	T100.14
-SĀ 17.15 	T99.1076 	? 	T100.15, Ud 8.9
-SĀ 17.16 	T99.1077 	? 	T100.16, MN 68, EĀ 38.6
-SĀ 17.17 	T99.1078 	? 	T100.17, SN 1.20
-SĀ 17.18 	T99.1079 	? 	T100.18, MN 23, EĀ 39.9
-SĀ 17.19 	T99.1080 	? 	T100.19
-SĀ 17.20 	T99.1081 	? 	T100.20, AN 3.126
-SĀ 17.21 	T99.1082 	? 	T100.21, SN 25.1
-SĀ 17.22 	T99.1083 	? 	T100.22, SN 20.9 -->
+---
+layout: default
+type: toc
+title: 'The Related Discourses | 17. Monks | Contents'
+base: ../../../
+previous: ../16/index.html
+next: ../18/index.html
+---
+
+<h1><a href="../index.html">The Related Discourses</a></h1>
+<h2>17. Monks</h2>
+
+<hr/>
+
+<h2>Table of Contents</h2>
+
+<table class="ma-toc">
+  <th>Sūtra</th>
+  <th>Taisho</th>
+  <th>Title</th>
+  <th>SĀ<sup>2</sup> Parallel</th>
+  <th>Pali Parallel(s)</th>
+
+  <tr>
+    <td>1.</td>
+    <td>(1062)</td>
+    <td><a href="SA17_1.html"></a>?</td>
+    <td>T100.1</td>
+    <td><a href="https://suttacentral.net/sn21.5" target="_blank">SN 21.5</a></td>
+  </tr>
+  <tr>
+    <td>2.</td>
+    <td>(1063)</td>
+    <td><a href="SA17_2.html"></a>?</td>
+    <td>T100.2</td>
+    <td><a href="https://suttacentral.net/sn21.6" target="_blank">SN 21.6</a></td>
+  </tr>
+  <tr>
+    <td>3.</td>
+    <td>(1064)</td>
+    <td><a href="SA17_3.html"></a>?</td>
+    <td>T100.3</td>
+    <td><a href="https://suttacentral.net/sn17.35" target="_blank">SN 17.35</a>-<a href="https://suttacentral.net/sn17.36" target="_blank">36</a></td>
+  </tr>
+  <tr>
+    <td>4.</td>
+    <td>(1065)</td>
+    <td><a href="SA17_4.html"></a>?</td>
+    <td>T100.4</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>5.</td>
+    <td>(1066)</td>
+    <td><a href="SA17_5.html"></a>?</td>
+    <td>T100.6</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>6.</td>
+    <td>(1067)</td>
+    <td><a href="SA17_6.html"></a>?</td>
+    <td>T100.5</td>
+    <td><a href="https://suttacentral.net/sn21.8" target="_blank">SN 21.8</a></td>
+  </tr>
+  <tr>
+    <td>7.</td>
+    <td>(1068)</td>
+    <td><a href="SA17_7.html"></a>?</td>
+    <td>T100.7</td>
+    <td><a href="https://suttacentral.net/sn21.9" target="_blank">SN 21.9</a></td>
+  </tr>
+  <tr>
+    <td>8.</td>
+    <td>(1069)</td>
+    <td><a href="SA17_8.html"></a>?</td>
+    <td>T100.8</td>
+    <td><a href="https://suttacentral.net/sn21.7" target="_blank">SN 21.7</a>, <a href="https://suttacentral.net/an4.48" target="_blank">AN 4.48</a></td>
+  </tr>
+  <tr>
+    <td>9.</td>
+    <td>(1070)</td>
+    <td><a href="SA17_9.html"></a>?</td>
+    <td>T100.9</td>
+    <td><a href="https://suttacentral.net/sn21.4" target="_blank">SN 21.4</a></td>
+  </tr>
+  <tr>
+    <td>10.</td>
+    <td>(1071)</td>
+    <td><a href="SA17_10.html"></a>?</td>
+    <td>T100.10</td>
+    <td><a href="https://suttacentral.net/sn21.10" target="_blank">SN 21.10</a></td>
+  </tr>
+  <tr>
+    <td>11.</td>
+    <td>(1072)</td>
+    <td><a href="SA17_11.html"></a>?</td>
+    <td>T100.11</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>12.</td>
+    <td>(1073)</td>
+    <td><a href="SA17_12.html"></a>?</td>
+    <td>T100.12</td>
+    <td><a href="https://suttacentral.net/an3.79" target="_blank">AN 3.79</a></td>
+  </tr>
+  <tr>
+    <td>13.</td>
+    <td>(1074)</td>
+    <td><a href="SA17_13.html"></a>?</td>
+    <td>T100.13</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>14.</td>
+    <td>(1075)</td>
+    <td><a href="SA17_14.html"></a>?</td>
+    <td>T100.14</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>15.</td>
+    <td>(1076)</td>
+    <td><a href="SA17_15.html"></a>?</td>
+    <td>T100.15</td>
+    <td><a href="https://suttacentral.net/ud8.9" target="_blank">Ud 8.9</a></td>
+  </tr>
+  <tr>
+    <td>16.</td>
+    <td>(1077)</td>
+    <td><a href="SA17_16.html"></a>?</td>
+    <td>T100.16</td>
+    <td><a href="https://suttacentral.net/mn68" target="_blank">MN 68</a></td>
+  </tr>
+  <tr>
+    <td>17.</td>
+    <td>(1078)</td>
+    <td><a href="SA17_17.html"></a>?</td>
+    <td>T100.17</td>
+    <td><a href="https://suttacentral.net/sn1.20" target="_blank">SN 1.20</a></td>
+  </tr>
+  <tr>
+    <td>18.</td>
+    <td>(1079)</td>
+    <td><a href="SA17_18.html"></a>?</td>
+    <td>T100.18</td>
+    <td><a href="https://suttacentral.net/mn23" target="_blank">MN 23</a></td>
+  </tr>
+  <tr>
+    <td>19.</td>
+    <td>(1080)</td>
+    <td><a href="SA17_19.html"></a>?</td>
+    <td>T100.19</td>
+    <td><a href="https://suttacentral.net/" target="_blank"></a>?</td>
+  </tr>
+  <tr>
+    <td>20.</td>
+    <td>(1081)</td>
+    <td><a href="SA17_20.html"></a>?</td>
+    <td>T100.20</td>
+    <td><a href="https://suttacentral.net/an3.126" target="_blank">AN 3.126</a></td>
+  </tr>
+  <tr>
+    <td>21.</td>
+    <td>(1082)</td>
+    <td><a href="SA17_21.html"></a>?</td>
+    <td>T100.21</td>
+    <td><a href="https://suttacentral.net/sn25.1" target="_blank">SN 25.1</a></td>
+  </tr>
+  <tr>
+    <td>22.</td>
+    <td>(1083)</td>
+    <td><a href="SA17_22.html"></a>?</td>
+    <td>T100.22</td>
+    <td><a href="https://suttacentral.net/sn20.9" target="_blank">SN 20.9</a></td>
+  </tr>
+</table>
+
+<hr/>
