--- a/01_agama/samyukta/18/index.html
+++ b/01_agama/samyukta/18/index.html
@@ -1,20 +1,166 @@
-<!--SĀ 18.1 	T99.1084 	? 	T100.23, SN 4.9
-SĀ 18.2 	T99.1085 	? 	T100.24, SN 4.10
-SĀ 18.3 	T99.1086 	? 	T100.25, SN 4.15
-SĀ 18.4 	T99.1087 	? 	T100.26, SN 4.7
-SĀ 18.5 	T99.1088 	? 	T100.27, SN 4.11
-SĀ 18.6 	T99.1089 	? 	T100.28, SN 4.6
-SĀ 18.7 	T99.1090 	? 	T100.29, SN 4.13
-SĀ 18.8 	T99.1091 	? 	T100.30, SN 4.23
-SĀ 18.9 	T99.1092 	? 	T100.31, SN 4.24-25
-SĀ 18.10 	T99.1093 	? 	T100.32, SN 4.3
-SĀ 18.11 	T99.1094 	? 	SN 4.1
-SĀ 18.12 	T99.1095 	? 	SN 4.18
-SĀ 18.13 	T99.1096 	? 	SN 4.5
-SĀ 18.14 	T99.1097 	? 	SN 4.14
-SĀ 18.15 	T99.1098 	? 	SN 4.20
-SĀ 18.16 	T99.1099 	? 	SN 4.21
-SĀ 18.17 	T99.1100 	? 	SN 4.22
-SĀ 18.18 	T99.1101 	? 	SN 4.12
-SĀ 18.19 	T99.1102 	? 	SN 4.16
-SĀ 18.20 	T99.1103 	? 	SN 4.17 -->
+---
+layout: default
+type: toc
+title: 'The Related Discourses | 18. Māra | Contents'
+base: ../../../
+previous: ../17/index.html
+next: ../19/index.html
+---
+
+<h1><a href="../index.html">The Related Discourses</a></h1>
+<h2>18. Māra</h2>
+
+<hr/>
+
+<h2>Table of Contents</h2>
+
+<table class="ma-toc">
+  <th>Sūtra</th>
+  <th>Taisho</th>
+  <th>Title</th>
+  <th>SĀ<sup>2</sup> Parallel</th>
+  <th>Pali Parallel(s)</th>
+
+  <tr>
+    <td>1.</td>
+    <td>(1084)</td>
+    <td><a href="SA18_1.html"></a>?</td>
+    <td>T100.23</td>
+    <td><a href="https://suttacentral.net/sn4.9" target="_blank">SN 4.9</a></td>
+  </tr>
+  <tr>
+    <td>2.</td>
+    <td>(1085)</td>
+    <td><a href="SA18_2.html"></a>?</td>
+    <td>T100.24</td>
+    <td><a href="https://suttacentral.net/sn4.10" target="_blank">SN 4.10</a></td>
+  </tr>
+  <tr>
+    <td>3.</td>
+    <td>(1086)</td>
+    <td><a href="SA18_3.html"></a>?</td>
+    <td>T100.25</td>
+    <td><a href="https://suttacentral.net/sn4.15" target="_blank">SN 4.15</a></td>
+  </tr>
+  <tr>
+    <td>4.</td>
+    <td>(1087)</td>
+    <td><a href="SA18_4.html"></a>?</td>
+    <td>T100.26</td>
+    <td><a href="https://suttacentral.net/sn4.7" target="_blank">SN 4.7</a></td>
+  </tr>
+  <tr>
+    <td>5.</td>
+    <td>(1088)</td>
+    <td><a href="SA18_5.html"></a>?</td>
+    <td>T100.27</td>
+    <td><a href="https://suttacentral.net/sn4.11" target="_blank">SN 4.11</a></td>
+  </tr>
+  <tr>
+    <td>6.</td>
+    <td>(1089)</td>
+    <td><a href="SA18_6.html"></a>?</td>
+    <td>T100.28</td>
+    <td><a href="https://suttacentral.net/sn4.6" target="_blank">SN 4.6</a></td>
+  </tr>
+  <tr>
+    <td>7.</td>
+    <td>(1090)</td>
+    <td><a href="SA18_7.html"></a>?</td>
+    <td>T100.29</td>
+    <td><a href="https://suttacentral.net/sn4.13" target="_blank">SN 4.13</a></td>
+  </tr>
+  <tr>
+    <td>8.</td>
+    <td>(1091)</td>
+    <td><a href="SA18_8.html"></a>?</td>
+    <td>T100.30</td>
+    <td><a href="https://suttacentral.net/sn4.23" target="_blank">SN 4.23</a></td>
+  </tr>
+  <tr>
+    <td>9.</td>
+    <td>(1092)</td>
+    <td><a href="SA18_9.html"></a>?</td>
+    <td>T100.31</td>
+    <td><a href="https://suttacentral.net/sn4.24" target="_blank">SN 4.24</a>-<a href="https://suttacentral.net/sn4.25" target="_blank">25</a></td>
+  </tr>
+  <tr>
+    <td>10.</td>
+    <td>(1093)</td>
+    <td><a href="SA18_10.html"></a>?</td>
+    <td>T100.32</td>
+    <td><a href="https://suttacentral.net/sn4.3" target="_blank">SN 4.3</a></td>
+  </tr>
+  <tr>
+    <td>11.</td>
+    <td>(1094)</td>
+    <td><a href="SA18_11.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.1" target="_blank">SN 4.1</a></td>
+  </tr>
+  <tr>
+    <td>12.</td>
+    <td>(1095)</td>
+    <td><a href="SA18_12.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.18" target="_blank">SN 4.18</a></td>
+  </tr>
+  <tr>
+    <td>13.</td>
+    <td>(1096)</td>
+    <td><a href="SA18_13.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.5" target="_blank">SN 4.5</a></td>
+  </tr>
+  <tr>
+    <td>14.</td>
+    <td>(1097)</td>
+    <td><a href="SA18_14.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.14" target="_blank">SN 4.14</a></td>
+  </tr>
+  <tr>
+    <td>15.</td>
+    <td>(1098)</td>
+    <td><a href="SA18_15.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.20" target="_blank">SN 4.20</a></td>
+  </tr>
+  <tr>
+    <td>16.</td>
+    <td>(1099)</td>
+    <td><a href="SA18_16.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.21" target="_blank">SN 4.21</a></td>
+  </tr>
+  <tr>
+    <td>17.</td>
+    <td>(1100)</td>
+    <td><a href="SA18_17.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.22" target="_blank">SN 4.22</a></td>
+  </tr>
+  <tr>
+    <td>18.</td>
+    <td>(1101)</td>
+    <td><a href="SA18_18.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.12" target="_blank">SN 4.12</a></td>
+  </tr>
+  <tr>
+    <td>19.</td>
+    <td>(1102)</td>
+    <td><a href="SA18_19.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.16" target="_blank">SN 4.16</a></td>
+  </tr>
+  <tr>
+    <td>20.</td>
+    <td>(1103)</td>
+    <td><a href="SA18_20.html"></a>?</td>
+    <td>—</td>
+    <td><a href="https://suttacentral.net/sn4.17" target="_blank">SN 4.17</a></td>
+  </tr>
+</table>
+
+<hr/>
