--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,8 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>29-Mar-2025</dt>
+    <dd>Added <a href="01_agama/madhyama/MA_036.html">MĀ 36 Earthquake</a></dd>
     <dt>28-Mar-2025</dt>
     <dd>Added <a href="01_agama/madhyama/MA_034.html">MĀ 34 Bakula</a></dd>
     <dt>27-Mar-2025</dt>
