--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,10 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>11-Apr-2025</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/01/SA1_59.html">SĀ 1.59 Greed and Attachment</a></dd>
+    <dd><a href="01_agama/samyukta/01/SA1_60.html">SĀ 1.60 Thorough Contemplation</a></dd>
     <dt>29-Mar-2025</dt>
     <dd>Added <a href="01_agama/madhyama/MA_036.html">MĀ 36 Earthquake</a></dd>
     <dt>28-Mar-2025</dt>
