--- a/whats-new.html
+++ b/whats-new.html
@@ -6,6 +6,13 @@ title: Dharma Pearls | What’s New
 <article class="home">
 <h1>What’s New</h1>
   <dl class="whats-new">
+    <dt>15-Apr-2025</dt>
+    <dd>Translations added:</dd>
+    <dd><a href="01_agama/samyukta/02/SA2_93.html">SĀ 2.93 The Sense Fields of Contact</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_94.html">SĀ 2.94 Don’t Be Pleased or Suffer</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_95.html">SĀ 2.95 Become Aware of the Sense Fields</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_96.html">SĀ 2.96 The Careful Practice</a></dd>
+    <dd><a href="01_agama/samyukta/02/SA2_97.html">SĀ 2.97 Two Things</a></dd>
     <dt>11-Apr-2025</dt>
     <dd>Translations added:</dd>
     <dd><a href="01_agama/samyukta/01/SA1_59.html">SĀ 1.59 Greed and Attachment</a></dd>
